<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_gradient_background"
    tools:context=".ProfileFragment">


    <android.support.v7.widget.CardView
        android:id="@+id/profile_user_info"
        android:layout_width="335dp"
        android:layout_height="293dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/prof_reputation"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginBottom="176dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/profile_reputation_place_holder"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/prof_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="176dp"
                android:layout_marginEnd="56dp"
                android:layout_marginTop="32dp"
                android:text="@string/profile_friends_place_holder"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/prof_reputation"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/prof_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/profile_post_holder"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/prof_friends"
                app:layout_constraintHorizontal_bias="0.076"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.277" />

            <ImageView
                android:id="@+id/profile_add_friend_icon"
                android:layout_width="43dp"
                android:layout_height="41dp"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="44dp"
                android:src="@drawable/freinds_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/profile_chat_icon"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/profile_chat_icon"
                android:layout_width="43dp"
                android:layout_height="41dp"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="64dp"
                android:src="@drawable/chat_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/profile_email_icon" />

            <ImageView
                android:id="@+id/profile_email_icon"
                android:layout_width="43dp"
                android:layout_height="41dp"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="52dp"
                android:src="@android:drawable/sym_action_email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/profile_post_count"
                android:layout_width="21dp"
                android:layout_height="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:textColor="@android:color/background_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/profile_friends_count"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prof_post"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/profile_friends_count"
                android:layout_width="30dp"
                android:layout_height="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="76dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:textColor="@android:color/background_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/profile_reputation_count"
                app:layout_constraintTop_toBottomOf="@+id/prof_friends"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/profile_reputation_count"
                android:layout_width="39dp"
                android:layout_height="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:textColor="@android:color/background_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prof_reputation"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/profile_user_image_container"
        android:layout_width="318dp"
        android:layout_height="212dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_user_background"
                android:layout_width="322dp"
                android:layout_height="225dp"
                android:src="@drawable/prof_monaco"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_user_picture"
                android:layout_width="140dp"
                android:layout_height="101dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="56dp"
                android:src="@drawable/profile_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/profile_user_background" />

            <android.support.v7.widget.CardView
                android:layout_width="76dp"
                android:layout_height="25dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_user_picture"
                app:layout_constraintVertical_bias="0.0">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/profile_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/profile_user_name"
                        android:textColor="@android:color/background_dark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <!-- TODO: Update blank fragment layout -->

</android.support.constraint.ConstraintLayout>